@@ -6,6 +6,9 @@
  * See the COPYING file for the terms of usage and distribution.
  */
 
+#include "config.h"
+#if HAVE_LIBIDSA
+
 #include <unistd.h>
 #include <sys/types.h>
 #include <sys/stat.h>
@@ -72,3 +75,5 @@ namespace log4cpp {
     }
 
 }
+
+#endif // HAVE_LIBIDSA
